--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".node_libraries/logerr"]
-	path = .node_libraries/logerr
+[submodule "node_modules/logerr"]
+	path = node_modules/logerr
 	url = git@github.com:papiro/logerr.git
