--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node_modules/logerr"]
 	path = node_modules/logerr
 	url = git@github.com:papiro/logerr.git
+[submodule "node_modules/sarge"]
+	path = node_modules/sarge
+	url = https://github.com/papiro/sarge.git
