--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "node_modules/sarge"]
 	path = node_modules/sarge
 	url = https://github.com/papiro/sarge.git
+[submodule "node_modules/_private"]
+	path = node_modules/_private
+	url = git@github.com:papiro/_private.git
